--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
 .navbar {
   border-bottom: 1px solid #efefef;
   padding: 10px 0px;
+  background: #fff !important;
 }
 
 .navbar-item img {
@@ -141,6 +142,17 @@ footer li {
 
 .section-heading {
   margin-bottom: 50px;
+}
+
+.about-img img {
+  border-radius: 5px;
+  -webkit-transition: all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.about-img img:hover {
+  -webkit-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.075), 0 15px 12px rgba(95, 95, 95, 0.062);
+          box-shadow: 0 19px 38px rgba(0, 0, 0, 0.075), 0 15px 12px rgba(95, 95, 95, 0.062);
 }
 
 .sub-wrapper {
