--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@ body{
 .navbar{
     border-bottom: 1px solid #efefef;
     padding:10px 0px;
+    background: #fff !important;
 }
 .navbar-item img {
     max-height: 3rem;
@@ -144,7 +145,17 @@ height: 1px;
 .section-heading{
     margin-bottom: 50px;
 }
+.about-img{
+    img{
+        border-radius: 5px;
+        -webkit-transition: all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition:         all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        &:hover{
+            box-shadow: 0 19px 38px rgba(0, 0, 0, 0.075), 0 15px 12px rgba(95, 95, 95, 0.062);
 
+        }
+    }
+}
 //grid space
 .sub-wrapper{
     display: grid;
