--- a/css/main.scss
+++ b/css/main.scss
@@ -224,8 +224,11 @@ height: 1px;
     .section-heading{
         margin-bottom: 20px;
     }
-    #about, #subsidiaries, footer{
-        padding:50px 30px;
+    #about, #subsidiaries{
+        padding:70px 30px;
+    }
+    footer{
+        padding:30px;
     }
     .sub-wrapper{
         display: grid;
