--- a/css/main.css
+++ b/css/main.css
@@ -146,6 +146,8 @@ footer li {
 
 .about-img img {
   border-radius: 5px;
+  -webkit-box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+          box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   -webkit-transition: all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
@@ -243,7 +245,7 @@ footer li {
     background: url(/img/mobile-bg.svg);
   }
   .hero-text-side {
-    padding: 10% 0px;
+    padding: 10% 20px;
   }
   .hero-image-side {
     padding: 20px;
