--- a/css/main.scss
+++ b/css/main.scss
@@ -148,6 +148,7 @@ height: 1px;
 .about-img{
     img{
         border-radius: 5px;
+        box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
         -webkit-transition: all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition:         all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
         &:hover{
@@ -241,7 +242,7 @@ height: 1px;
         background: url(/img/mobile-bg.svg);
     }
     .hero-text-side{
-        padding: 10% 0px;
+        padding: 10% 20px;
     }
     .hero-image-side{
         padding:20px;
