--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,11 @@ body {
   transition: all 600ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
+.special {
+  width: 400px;
+  height: auto;
+}
+
 .hero-title {
   font-weight: 700;
   font-size: 2.6em;
@@ -399,6 +404,10 @@ footer li {
   .lithium {
     width: 400px !important;
     height: 600px !important;
+  }
+  .special {
+    width: 70%;
+    height: auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
